--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.14.2",
-    "next": "14.1.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/material-nextjs": "^5.15.11",
+    "@mui/styles": "^5.15.12",
+    "@reduxjs/toolkit": "^2.2.1",
+    "next": "14.1.2",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.64",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.2.21",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
-    "typescript": "^5"
+    "eslint-config-next": "14.1.2",
+    "typescript": "^5.3.3"
   }
 }
